--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,45 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+
 
 trigger:
-- master
+  - main
 
+pool:
+  vmImage: "windows-latest"
+
+variables:
+  solution: "**/*.sln"
+  buildPlatform: "Any CPU"
+  buildConfiguration: "Release"
+
+steps:
+  - task: NuGetToolInstaller@1
+
+  - task: NuGetCommand@2
+    inputs:
+      restoreSolution: "$(solution)"
+
+  - task: VSBuild@1
+    inputs:
+      solution: "$(solution)"
+      msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+      platform: "$(buildPlatform)"
+      configuration: "$(buildConfiguration)"
 
   - task: CmdLine@2
     displayName: Veracode Pipeline Scan
     inputs:
       script: |
-        curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
-        FOSSA_API_KEY=8229158d3befa3c8ee0db34e3714e394
-        FOSSA
+        curl -sSO https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+        unzip -o pipeline-scan-LATEST.zip
+        java -jar pipeline-scan.jar -vid $(VERACODE_API_ID) -vkey $(VERACODE_API_KEY) -f $(build.artifactstagingdirectory)\Verademo-dotnet.zip || true
+      # VERACODE_API_ID and VERACODE_API_KEY environment variables must reference your API credentials.
+      # "|| true" specifies to continue build if Pipeline Scan discovers flaws.
+      # To fail the build for new flaws not listed in a baseline file, add an existing baseline file with "-bf <baseline filename>" and remove "|| true".
+
+  - task: PublishBuildArtifacts@1
+    displayName: Create Build Artifact for Veracode Pipeline Scan Results
+    inputs:
+      PathtoPublish: "results.json"
+      ArtifactName: "Build"
+      publishLocation: "Container"
+
