--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
   - main
 
 pool:
-  vmImage: "windows-latest"
+  vmImage: "ubuntu-latest"
 
 variables:
   solution: "**/*.sln"
@@ -18,28 +18,12 @@ steps:
     inputs:
       restoreSolution: "$(solution)"
 
-  - task: VSBuild@1
-    inputs:
-      solution: "$(solution)"
-      msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-      platform: "$(buildPlatform)"
-      configuration: "$(buildConfiguration)"
 
-  - task: CmdLine@2
-    displayName: Veracode Pipeline Scan
+  - task: CmdLine@1
+    displayName: FOSSA
     inputs:
       script: |
         curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
         FOSSA_API_KEY=8229158d3befa3c8ee0db34e3714e394
         fossa
-      # VERACODE_API_ID and VERACODE_API_KEY environment variables must reference your API credentials.
-      # "|| true" specifies to continue build if Pipeline Scan discovers flaws.
-      # To fail the build for new flaws not listed in a baseline file, add an existing baseline file with "-bf <baseline filename>" and remove "|| true".
-
-  - task: PublishBuildArtifacts@1
-    displayName: Create Build Artifact for Veracode Pipeline Scan Results
-    inputs:
-      PathtoPublish: "results.json"
-      ArtifactName: "Build"
-      publishLocation: "Container"
-
+      
