--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ steps:
     displayName: FOSSA
     inputs:
       script: |
-        curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
+        curl -sSO https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh
+        ./install.sh
         FOSSA_API_KEY=8229158d3befa3c8ee0db34e3714e394
         fossa
       
